updated changes for hub event processor
