# typescript/packages/apps/dataAsset/src/api/dataAsset/schemas.ts
@@ -51,7 +51,7 @@ export type Tags = Static<typeof tags>;
 
 export const catalog = Type.Object({
     domainId: Type.String({ description: 'Data Zone domain id' }),
-    domainName: Type.String({ description: 'Data Zone domain name' }),
+    domainName: Type.Optional(Type.String({ description: 'Data Zone domain name' })),
     environmentId: Type.String({ description: 'Data Zone environment id' }),
     projectId: Type.Optional(Type.String({ description: 'Data Zone project id' })),
     region: Type.Optional(Type.String({ description: 'Data Zone environment region' })),
@@ -90,7 +90,7 @@ export const redshiftConnection = Type.Object({
     path: Type.String({ description: "Path for the Glue Crawler data source (e.g. /dev/public/table_x) (used in glue crawler without recipe job)"}),
     
     databaseTableName: Type.String({ description: "The database table name for DataBrew dataset (used in recipe job data set)."}),
-    queryString: Type.String({ description: "The query string for DataBrew dataset (used in recipe job data set)."})
+    queryString: Type.Optional(Type.String({ description: "The query string for DataBrew dataset (used in recipe job data set)."}))
 });
 
 export const connection = Type.Optional(Type.Object({
@@ -134,41 +134,6 @@ export const transforms = Type.Optional(Type.Object({
 export const schedule = Type.Optional(Type.Object({
     // TODO to be implemented
 }));
-
-// export const profileSummary = Type.Object(
-//     {
-//         sampleSize: Type.Number({ description: 'The number of rows used as a sample size from the dataset' }),
-//         columnCount: Type.Number({ description: 'The number of columns in the dataset' }),
-//         duplicateRowsCount: Type.Number({ description: 'The number of duplicate rows' }),
-//         location: Type.String({ description: 'The location of the S3 file containing the profile information' }),
-//         totalMissingValues: Type.Number({ description: 'The number of total missing values across all columns' })
-//     }
-// );
-
-// export const columnProfile = Type.Object(
-//     {
-//         name: Type.String({ description: 'The name of the column' }),
-//         type: Type.String({ description: 'The type of the column' }),
-//         distinctValuesCount: Type.Number({ description: 'The number of distinct values'}),
-//         uniqueValuesCount: Type.Number({ description: 'The number of unique Values' }),
-//         missingValuesCount: Type.Number({ description: 'The number of missing values' }),
-//         mostCommonValues: Type.Number({ description: 'Top 5 most common values' }),
-//         max: Type.Number({ description: 'The number of total missing values across all columns' }),
-//         min: Type.Number({ description: 'The number of total missing values across all columns' }),
-//         mean: Type.Number({ description: 'The number of total missing values across all columns' })
-//     }
-// );
-
-// export const columns = Type.Optional(
-// 	Type.Array(columnProfile, {
-// 		description: 'column profiles that are to be added to our asset.'
-// 	})
-// );
-
-// export const profile = Type.Object({
-//     summary: profileSummary,
-//     columns
-// });
 
 export const workflow = Type.Object({
     name: Type.String({ description: 'The name of the workflow' }),
@@ -217,10 +182,8 @@ export const execution = Type.Object({
 
 export const dataAssetResource = Type.Object({
     requestId: id,
-    // execution: Type.Optional(execution),
     catalog,
-    workflow,
-    // profile:Type.Optional(profile)
+    workflow
 }, { $id: 'dataAssetResource' });
 
 export const newDataAssetResource = Type.Object({
